--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -661,6 +661,7 @@
                 console.log(inputElement.value);
                 
                 if (inputElement.value !== ''){
+                    document.getElementById('error-slide').textContent = '';
 
                         console.log('first line is true')
                     document.getElementById('currentFile').textContent = '';
