--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -335,30 +335,9 @@
             console.log("No <li> items found to remove.");
         }
     }
-    // function attachValidation(formId, clipId) {
-    //     const form = document.getElementById(formId);
-    //     if (form) {
-    //         const formClipID = document.getElementById('clipId').value;
-
-    //         const fileInput = document.getElementById('slide_file');
-    //         const videoSelect = document.getElementById(`videoSelect_${formClipID}`);
-
-    //         if ((!fileInput.value || fileInput.value.trim() === "") &&
-    //             (!videoSelect || !videoSelect.value || videoSelect.value.trim() === "")) {
-    //             // alert("Please either upload a video file or select a video clip.");
-    //             document.getElementById('error-slide').textContent = 'Select A Clip';
-    //             videoSelect.focus();
-    //         } else {
-    //             document.getElementById('submit-clip').disabled = true
-    //             document.getElementById('submit-clip').style.cursor = 'wait'
-
-    //             form.submit();
-    //         }
-
-    //     }
-    // }
+    
     function attachValidation(formId, clipId) {
-        const li= document.getElementById(`current_${clip_id}`)
+        const li= document.getElementById(`current_li_${clip_id}`)
         if (li){
             li.disabled=true
 
@@ -378,11 +357,10 @@
             document.getElementById('submit-clip').disabled = true;
             document.getElementById('submit-clip').style.cursor = 'wait';
 
-            // Create a FormData object to gather all form inputs
+
             const formData = new FormData(form);
             document.getElementById('add-subclip-popup').style.display = 'none';
 
-            // Send the AJAX request
             fetch(form.action, {
                 method: 'POST',
                 body: formData,
@@ -404,6 +382,7 @@
                         liItem.dataset.main_id=data.main_id;
                         liItem.disabled=false;
                         liItem.style.cursor='pointer';
+                        console.log(document.getElementById(`current_li_${clip_id}`));
 
                     };
                     document.getElementById('submit-clip').disabled = false;
