--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -395,7 +395,9 @@ function attachValidation(formId, clipId) {
                     // Reset the form
                     form.reset(); // Clear all inputs in the form
                     console.log('Clip Submitted Successfully');
-                    document.getElementById('submit-cont').innerHTML='<h1>Form Submitted Successfully</h1>'
+                    setTimeout(() => {
+                        document.getElementById('submit-cont').innerHTML='<h1>Form Submitted Successfully</h1>'
+                        }, 500);
                     document.getElementById('add-subclip-popup').style.display = 'none';
 
                 } else {
