--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -336,7 +336,7 @@
         }
     }
     
-//  
+
 function attachValidation(formId, clipId) {
     const li = document.getElementById(`current_li_${clipId}`);
     if (li) {
@@ -344,6 +344,7 @@ function attachValidation(formId, clipId) {
     }
 
     const form = document.getElementById(formId);
+    
     if (form) {
         const formClipID = document.getElementById('clipId').value;
         const fileInput = document.getElementById('slide_file');
@@ -365,62 +366,69 @@ function attachValidation(formId, clipId) {
             // Submit the form via AJAX
             form.disabled=true;
             form.style.display='wait'
-            fetch(form.action, {
-                method: 'POST',
-                body: formData,
-                headers: {
-                    'X-Requested-With': 'XMLHttpRequest', // For Django to identify AJAX request
-                }
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    console.log("Subclip created with ID:", data.subclip_id);
-                    
-                    // Update the dataset of the `li` element
-                    if (li) {
-                        console.log('data: ', data);
-                        li.dataset.video_clip_id = data.video_clip_id;
-                        li.dataset.current_file = data.current_file;
-                        li.dataset.cat_id = data.cat_id;
-                        li.dataset.id = data.subclip_id;
-                        li.dataset.subclip_id = data.subclip_id;
-                        li.dataset.main_id = data.main_id;
-                        li.disabled = false;
-                        li.style.cursor = 'pointer';
-                        clipId = data.subclip_id;
-                        li.id = `current_li_${clipId}`;
-                        console.log(li);
-                        li.style.cursor = 'pointer';
+            if (submitCheck){
+                submitCheck=false
+                fetch(form.action, {
+                    method: 'POST',
+                    body: formData,
+                    headers: {
+                        'X-Requested-With': 'XMLHttpRequest', // For Django to identify AJAX request
                     }
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        console.log("Subclip created with ID:", data.subclip_id);
+                        
+                        // Update the dataset of the `li` element
+                        if (li) {
+                            console.log('data: ', data);
+                            li.dataset.video_clip_id = data.video_clip_id;
+                            li.dataset.current_file = data.current_file;
+                            li.dataset.cat_id = data.cat_id;
+                            li.dataset.id = data.subclip_id;
+                            li.dataset.subclip_id = data.subclip_id;
+                            li.dataset.main_id = data.main_id;
+                            li.disabled = false;
+                            li.style.cursor = 'pointer';
+                            clipId = data.subclip_id;
+                            li.id = `current_li_${clipId}`;
+                            console.log(li);
+                            li.style.cursor = 'pointer';
+                        }
+    
+                        // Reset the form
+                        sessionStorage.clear();
+                        form.reset(); // Clear all inputs in the form
+                        console.log('Clip Submitted Successfully');
+                        
+                        document.getElementById('add-subclip-popup').style.display = 'none';
+                        form.disabled=false;
+                        form.style.display='default'
+    
+                    } else {
+                        document.getElementById('error-slide').textContent = data.error || "An error occurred.";
+                    }
+                })
+                .catch(error => {
+                    submitCheck =true
 
-                    // Reset the form
-                    sessionStorage.clear();
-                    form.reset(); // Clear all inputs in the form
-                    console.log('Clip Submitted Successfully');
-                    
-                    document.getElementById('add-subclip-popup').style.display = 'none';
-                    form.disabled=false;
-                    form.style.display='default'
+                    console.error("Error submitting form:", error);
+                    document.getElementById('error-slide').textContent = "An error occurred.";
+                })
+                .finally(() => {
+                    // Re-enable the submit button
+                    document.getElementById('submit-clip').disabled = false;
+                    document.getElementById('submit-clip').style.cursor = 'pointer';
+    
+                    // Reset the file input field
+                    if (fileInput) {
+                        fileInput.value = ""; // This ensures the file input is cleared
+                    }
+                });
+           
 
-                } else {
-                    document.getElementById('error-slide').textContent = data.error || "An error occurred.";
-                }
-            })
-            .catch(error => {
-                console.error("Error submitting form:", error);
-                document.getElementById('error-slide').textContent = "An error occurred.";
-            })
-            .finally(() => {
-                // Re-enable the submit button
-                document.getElementById('submit-clip').disabled = false;
-                document.getElementById('submit-clip').style.cursor = 'pointer';
-
-                // Reset the file input field
-                if (fileInput) {
-                    fileInput.value = ""; // This ensures the file input is cleared
-                }
-            });
+            }
         }
     }
 }
