--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -395,6 +395,9 @@ function attachValidation(formId, clipId) {
                             li.id = `current_li_${clipId}`;
                             console.log(li);
                             li.style.cursor = 'pointer';
+                            li.onclick=function () {
+                                editCurrentLi(li);
+                            };
                         }
     
                         // Reset the form
