--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -398,6 +398,7 @@ function attachValidation(formId, clipId) {
                             li.onclick=function () {
                                 editCurrentLi(li);
                             };
+                            console.log(li);
                         }
     
                         // Reset the form
