--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -395,10 +395,10 @@ function attachValidation(formId, clipId) {
                             li.id = `current_li_${clipId}`;
                             console.log(li);
                             li.style.cursor = 'pointer';
-                            li.onclick=null
-                            li.onclick=function () {
-                                editCurrentLi(li);
-                            };
+                            // li.onclick=null
+                            // li.onclick=function () {
+                            //     editCurrentLi(li);
+                            // };
                             console.log(li);
                         }
     
