--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -419,8 +419,8 @@
 
                                 {% for subclip in clip.subclips.all %}
                                 <li data-id="{{subclip.id}}"
-                                id="current_li_{{subclip.id}}"
-                                    onclick="editSubclip(this,'{{subclip.get_video_file_name}}','{{subclip.video_clip.id}}','{{subclip.video_clip.category.id}}' )">
+                                id="current_li_{{subclip.id}}" data-video_clip_id="{{subclip.video_clip.id}}" data-current_file="{{subclip.get_video_file_name}}" data-cat_id="{{subclip.video_clip.category.id}}" data-subclip_id="{{subclip.id}}" data-main_id="{{subclip.main_line.id}}"
+                                    onclick="editCurrentLi(this)">
                                     {{subclip.subtittle}}</li>
                                 {% endfor %}
                                 <span id="slide_span_{{clip.id}}" data-num="{{clip.get_number_of_subclip}}"
