--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -831,9 +831,12 @@
                 document.getElementById('currentFile').textContent = `Current File: ${currentFile}`
             }
             if (videoId){
+                console.log('videoId: ',videoId )
                 document.getElementById(`selected_topic_${clipId}`).value = catId
                 fetchVideoClips(document.getElementById(`selected_topic_${clipId}`))
                 document.getElementById(`videoSelect_${clipId}`).value = videoId
+
+            }else{
 
             }
             editForm.addEventListener('submit', (e) => {
