--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -661,7 +661,7 @@
 
             } else {
 
-                sessionStorage.setItem(inputElement.id, inputElement.value);
+                // sessionStorage.setItem(inputElement.id, inputElement.value);
                 console.log(inputElement.value);
                 
                 if (inputElement.value !== ''){
