--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -362,8 +362,8 @@ function attachValidation(formId, clipId) {
             videoSelect.focus();
         } else {
             // Disable the submit button and set cursor to 'wait'
-            document.getElementById('submit-clip').disabled = true;
-            document.getElementById('submit-clip').style.cursor = 'wait';
+            // document.getElementById('submit-clip').disabled = true;
+            // document.getElementById('submit-clip').style.cursor = 'wait';
 
             // Prepare form data for submission
             const formData = new FormData(form);
