--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -576,7 +576,6 @@
             document.getElementById('add-subclip-popup').style.display = 'flex';
             const formElement = document.getElementById('add-subclip-form')
             formElement.action = `/text/add_subclip/${clipId}/`
-            formElement.id=`add-subclip-form${clipId}`
             const htmlContainer = document.getElementById('submit-cont');
             clip_id = clipId
             htmlContainer.innerHTML = `
@@ -744,9 +743,9 @@
                         remainingInput.value = remainingText;
                         span.innerText = remainingText;
                         openPopup(clipId, selectedText, remainingText);
-                        document.getElementById(`add-subclip-form${clipId}`).addEventListener('submit', (e) => {
+                        document.getElementById('add-subclip-form').addEventListener('submit', (e) => {
                             e.preventDefault();
-                            attachValidation(`add-subclip-form${clipId}`, clipId);
+                            attachValidation('add-subclip-form', clipId);
                         })
 
 
@@ -772,7 +771,6 @@
             submitCheck=true
             const editForm = document.getElementById('add-subclip-form')
             editForm.action = `/text/edit_subclip/${clipId}/`
-            editForm.id=`add-subclip-form${clipId}`
 
             const htmlContainer = document.getElementById('submit-cont');
             const selectedText = liElement.textContent
@@ -837,7 +835,7 @@
                 fetchVideoClips(document.getElementById(`selected_topic_${clipId}`),videoId)
                 setTimeout(
                     document.getElementById(`videoSelect_${clipId}`).value = `${videoId}`,
-                    1000
+                    
                 )
 
             }else{
@@ -846,7 +844,7 @@
             editForm.addEventListener('submit', (e) => {
                 e.preventDefault();
 
-                attachValidation(editForm.id, clipId);
+                attachValidation('add-subclip-form', clipId);
 
             });
 
